Hide scrollbar (ensures slides are aligned with header)

--- a/app/static/features/20-years/_styles.sass
+++ b/app/static/features/20-years/_styles.sass
@@ -547,7 +547,8 @@ strong, .txt-tu, .caption
   font-style: normal
 
 .row,
-.container
+.container,
+.scroller
   max-width: 1280px
   width: 100%
   padding: 0 2rem
@@ -877,6 +878,7 @@ html
 
 #scroller::-webkit-scrollbar
   background: #004b78
+  width: 0
 #scroller::-webkit-scrollbar-thumb
   background: #002b45
 
